--- a/user.css
+++ b/user.css
@@ -2,19 +2,24 @@
 /* Changes these to change the colors of the panel!!! */
 
 :root {
-  --main-bg-color: #292841 !important;
-  --secondary-bg-color: #242338 !important;
+  --main-bg-color: #45671c !important;
+  --secondary-bg-color: #22340e !important;
   --secondary-bg-color-alt: #1e1d2d !important;
-  --accent-color: #7289da !important;
+  --accent-color: #679b2a !important;
   --accent-secondary-color: #413f66 !important;
   --text-color: #fafafa !important;
   --border-radius: 15px !important;
+  --background-image: url("https://raw.githubusercontent.com/kokosnica/ptero-theme-kh/main/3949372.png")
 }
 
 /* Changes Background */
 
 body, .content-wrapper {
 	background-color: var(--main-bg-color) !important;
+	background-image: var(--backgroud-image) !important;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
 
 
